<resources>
    <string name="app_name">MMP-pdcSchema</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="logout">Log out</string>
    <string name="more">More</string>
    <string name="Setting">Setting</string>
    <string name="customer_code">Customer code</string>
    <string name="doublepoint">:</string>
    <string name="tripledot">...</string>
    <string name="customer_name">Customer name</string>
    <string name="customer_category">Customer category</string>
    <string name="customer_type">Customer type</string>
    <string name="total_credit">Total credit</string>
    <string name="credit_term">Credit term</string>
    <string name="detail_information">Detail information</string>
    <string name="approval_status">Approval status</string>
    <string name="total_item">Total itemSchema</string>
    <string name="no_items">No items</string>
    <string name="list_item">List item</string>
    <string name="item_name">Item name</string>
    <string name="on">On</string>
    <string name="bp1">BP1</string>
    <string name="Bp2">BP2</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="max">Max</string>
    <string name="hpp_cab">HPP CAB</string>
    <string name="unit">Unit</string>
    <string name="hna_per_pcs">HNA per pcs</string>
    <string name="total_hna">Total HNA</string>
    <string name="description">Desciption</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer close</string>
    <string name="logout_confirmation">Do you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="hide_detail">Hide detail information</string>
    <string name="show_detail">Show detail information</string>
    <string name="unselect">Unselect</string>
    <string name="action_approve_confirmation">Please select your action</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
</resources>
