<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_nav" android:checkableBehavior="single">
        <itemSchema
            android:id="@+id/nav_home"
            app:actionLayout="@layout/menu_item_layout"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/home" />

        <itemSchema
            android:id="@+id/nav_schedule"
            app:actionLayout="@layout/menu_item_layout"
            android:icon="@drawable/ic_logout"
            android:title="@string/Setting" />


    </group>

    <itemSchema android:title="@string/more"
        >
        <menu>

            <itemSchema
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </itemSchema>

</menu>
